[project]
name = "snowflake-keypair-helper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
 "adbc-driver-snowflake>=1.8.0",
 "snowflake-connector-python>=3.17.4",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/xorq-labs/snowflake-keypair-helper/"
Issues = "https://github.com/xorq-labs/snowflake-keypair-helper/issues"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]
test = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "needs_gh_test_role_access",
]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
