[project]
name = "snowflake-keypair-helper"
version = "0.1.0"
description = "A library for creating, managing and using keypairs to authenticate to Snowflake"
requires-python = ">=3.12"
dependencies = [
 "adbc-driver-snowflake>=1.8.0",
 "click>=8.3.0",
 "snowflake-connector-python>=3.17.4",
]
license = { file = "LICENSE" }
authors = [
    { name = "Dan Lovell", email = "dan@letsql.com" },
]
maintainers = [
    { name = "Dan Lovell", email = "dan@letsql.com" },
    { name = "Daniel Mesejo", email = "mesejo@letsql.com" },
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/xorq-labs/snowflake-keypair-helper/"
Issues = "https://github.com/xorq-labs/snowflake-keypair-helper/issues"

[project.scripts]
generate-envrc = "snowflake_keypair_helper.cli:generate_envrc"
assign-public-key = "snowflake_keypair_helper.cli:assign_public_key"
generate-and-assign-keypair = "snowflake_keypair_helper.cli:generate_and_assign_keypair"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "needs_gh_test_role_access",
]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
